# cppli

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  docker-compose.yml
cmake/: cppliConfig.cmake.in
doc/: mainpage.dox  mainpage.dox.c
include/: cppli.hpp  cppli_error.hpp  cppli_subcommand.hpp  cppli_types.hpp
src/: cppli.cpp  cppli_error.cpp  cppli_subcommand.cpp  cppli_types.cpp
tests/: test_error.cpp  test_parser.cpp  test_types.cpp
